--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <script src="script.js"></script>
-    <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
-  </head>
-  <body>
-    <h1>Christian Loyd Larazo</h1>
 
-    <p>Senior Software Engineer</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing alit, sad do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis auto irure dolor in reprehenderit in voluptate velit esse cilium dolore eu fugiat nulls pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officio deserunt mollit enim id out laborum.</p>
+<head>
+	<meta charset="UTF-8">
+	<title>Basic Styling</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
 
-    <p>Sed ut perspiciatis undo omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+<body>
+	<h1>Christian Loyd Larazo</h1>
 
-    <h3><em>Contact information</em></h3>
+	<p>Senior Software Engineer</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing alit, sad do eiusmod tempor incididunt ut labore et dolore
+		magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis auto irure dolor in reprehenderit in voluptate velit esse cilium dolore eu fugiat nulls
+		pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officio deserunt mollit enim id out
+		laborum.</p>
 
-    <ul>
-        <li>Email: loyd.larazo@gmail.com</li>
-        <li>Web: http://loydlarazo.com</li>
-        <li>Tel: 123 45678</li>
-    </ul>
-  </body>
+	<p>Sed ut perspiciatis undo omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+		aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+
+	<h2>Contact information</h2>
+
+	<ul>
+		<li>Email: <a href="loyd.larazo@gmail.com"> loyd.larazo@gmail.com</li>
+		<li>Web: <a href="http://loydlarazo.com">http://loydlarazo.com</a></li>
+		<li>Tel: 123 45678</li>
+	</ul>
+</body>
+
 </html>
