--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	<h2>Contact information</h2>
 
 	<ul>
-		<li>Email: <a href="loyd.larazo@gmail.com"> loyd.larazo@gmail.com</li>
-		<li>Web: <a href="http://loydlarazo.com">http://loydlarazo.com</a></li>
+		<li>Email: <a href="loyd.larazo@gmail.com"> loyd.larazo@gmail.com</a></li>
+		<li>Web:<a href="http://loydlarazo.com">http://loydlarazo.com</a></li>
 		<li>Tel: 123 45678</li>
 	</ul>
 </body>
