--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<h1>Christian Loyd Larazo</h1>
 
-	<p>Senior Software Engineer</p>
+	<p class="special">Senior Software Engineer</p>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing alit, sad do eiusmod tempor incididunt ut labore et dolore
 		magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis auto irure dolor in reprehenderit in voluptate velit esse cilium dolore eu fugiat nulls
